[package]
name = "chartpedia"
version = "0.0.1"
edition = "2021"
authors = ["Roman Hlushko"]

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.20"
chrono = "0.4.33"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
serde_json = "1.0.113"
regex = "1.10.3"
anyhow = "1.0.79"
thiserror = "1.0.57"
markdown-table = "0.2.0"
